scrollbar fixes

--- a/src/less/global.less
+++ b/src/less/global.less
@@ -259,3 +259,7 @@ md-card md-card-content {
 .italic {
   font-style: italic;
 }
+
+.hide-y-scrollbar {
+  overflow-y: hidden;
+}
